client/assets/styles/scss/server/server-sidebar.scss
.server-sidebar {
  height: calc(100vh - 132px);
  width: 300px;

  // empty states for sections
  .well {
    color: $gray;
    line-height: 17px;
    margin: 0 0 15px;
    padding: 6px 10px;
  }

  .spinner-wrapper {
    float: right;
    margin-top: 22px;
  }

  // override button and fancy-select styles
  .btn.gray {
    background-color: $gray-lighterest;
    color: $gray;
    font-size: 15px;
    font-weight: 400;
    height: auto;
    line-height: 24px;
    padding: 4px 27px 4px 9px;
    text-align: left;
    width: 100%;

    &:active {
      background-color: $white;
      color: $purple-light;
    }

    .icons-arrow-down {
      color: $gray-light;
      height: 100%;
      position: absolute;
      right: 9px;
      top: 0;
      width: 24px;
    }

    .display {
      float: none;
    }
  }
}

.sidebar-section {
  border-bottom: 1px solid $gray-lighter;
  display: flex;
  flex: 1 0 54px;
  flex-direction: column;
  max-height: 100%;
  transition: max-height .15s ease-in-out;

  &.closed {
    max-height: 54px;
    overflow-y: hidden;
  }
}

// file explorer section
.explorer-section {
  border-bottom-width: 0;

  &.closed {
    border-bottom-width: 1px;
  }

  .file-tree {
    margin: 0;
  }
}

.sidebar-section-heading {
  color: $gray-darker;
  cursor: pointer;
  flex: 0 0 54px;
  line-height: 54px;
  padding: 0 12px;
  position: relative;

  &:hover {
    color: $gray-dark;
  }

  &:active {
    color: $gray;
  }

  &.closed {
    color: $gray;

    &:hover {
      color: $gray-dark;
    }

    &:active {
      color: $gray-darker;
    }
  }

  .icons-disclose {
    left: -3px;
    top: 7px;
    width: 15px;

    .closed & {
      transform: rotate3d(0,0,1,-90deg);
    }
  }

  // for add buttons next to section headings, like in File Explorer
  .btn {
    height: 54px;
    transition: opacity .15s ease-in-out;

    &.ng-hide {
      opacity: 0;
    }

    .iconnables {
      width: 24px;
    }
  }
}

.sidebar-section-content {
  flex: 1 1 auto;
  overflow-x: hidden;
  overflow-y: auto;
  padding: 0 12px;

  // fake transition so it doesn't disappear before .sidebar-section’s transition completes
  &.ng-leave {
    transition: all .15s ease-in;
  }
}

.sidebar-section-item {
  margin-bottom: 3px;
  position: relative;
  top: -6px;

  &:last-child {
    margin-bottom: 9px;
  }

  .small {
    color: $gray-dark;
  }
}

